<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="@color/background" 
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:padding="30dip" 
    android:orientation="horizontal">
<LinearLayout 
     android:orientation="vertical" 
     android:layout_height="wrap_content" 
     android:layout_width="fill_parent" 
     android:layout_gravity="center">
<TextView 
      android:text="@string/main_title" 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content" 
      android:layout_gravity="center" 
      android:layout_marginBottom="5dip" 
      android:textSize="13sp" 
      android:textStyle="bold" /> 

<Button 
      android:id="@+id/continue_button" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/continue_label" 
      android:textSize="13sp"
      android:textStyle="bold" /> 

<Button 
      android:id="@+id/bus_button" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/bus_label" 
      android:textSize="13sp" 
      android:textStyle="bold" /> 
<Button 
      android:id="@+id/about_button" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/about_label" 
     android:textSize="13sp" android:textStyle="bold" /> 

<Button 
      android:id="@+id/exit_button" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/exit_label" 
      android:textSize="13sp"
      android:textStyle="bold" /> 

</LinearLayout>

</LinearLayout>